Adding inputs onclick

--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
       <div class="coordinates-form">
         <h3>Type coordinates</h3>
         <div class="content coordinates-values">
-          <label>
-            X
-            <input type="text" class="coordinate-x">
-          </label>
-          <label>
-            Y
-            <input type="text" class="coordinate-y">
-          </label>
+          <div class="coordinates-set">
+            <label>
+              X
+              <input type="text" class="coordinate-x">
+            </label>
+            <label>
+              Y
+              <input type="text" class="coordinate-y">
+            </label>
+          </div>
         </div>
         <div class="content buttons">
-          <button type="button">Add Point</button>
-          <button type="button">Calculate Path</button>
+          <button type="button" id="add-point">Add Point</button>
+          <button type="submit">Calculate Path</button>
         </div>
       </div>
       <div class="result-container">
