Add element with proper id

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <div class="coordinates-form">
         <h3>Type coordinates</h3>
         <div class="content coordinates-values">
-          <div class="coordinates-set">
+          <div class="coordinates-set" id=1>
+            <p>1.</p>
             <label>
               X
               <input type="text" class="coordinate-x">
