--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="content buttons">
           <button type="button" id="add-point">Add Point</button>
-          <button type="submit">Calculate Path</button>
+          <button type="submit" id="calculate">Calculate Path</button>
         </div>
       </div>
       <div class="result-container">
