Create array with coordinates stored in object

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         </div>
       </div>
       <div class="result-container">
-        <p>The order of points is: </p>
-        <p>The distance is: </p>
+        <p class="paths-number">Number of possible paths: </p>
+        <p class="path-order">The order of points is: </p>
+        <p class="path-distance">The distance is: </p>
       </div>
     </div>
   </main>
