Calculating hypot sets

--- a/index.html
+++ b/index.html
@@ -22,11 +22,44 @@
             <p>Starting point (0)</p>
             <label>
               X
-              <input type="text" class="coordinate-x">
+              <input type="text" class="coordinate-x" value=2>
             </label>
             <label>
               Y
-              <input type="text" class="coordinate-y">
+              <input type="text" class="coordinate-y" value=8>
+            </label>
+          </div>
+          <div class="coordinates-set" id=1>
+            <p>1</p>
+            <label>
+              X
+              <input type="text" class="coordinate-x" value=7>
+            </label>
+            <label>
+              Y
+              <input type="text" class="coordinate-y" value=2>
+            </label>
+          </div>
+          <div class="coordinates-set" id=2>
+            <p>2</p>
+            <label>
+              X
+              <input type="text" class="coordinate-x" value=3>
+            </label>
+            <label>
+              Y
+              <input type="text" class="coordinate-y" value=1>
+            </label>
+          </div>
+          <div class="coordinates-set" id=3>
+            <p>3</p>
+            <label>
+              X
+              <input type="text" class="coordinate-x" value=12>
+            </label>
+            <label>
+              Y
+              <input type="text" class="coordinate-y" value=4>
             </label>
           </div>
         </div>
