Show shortest path statistics

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
       </div>
       <div class="result-container">
         <p class="paths-number">Number of possible paths: </p>
-        <p class="path-order">The order of points is: </p>
+        <p class="path-order">The order of points for shortest path is: </p>
+        <p class="path-segments">The distance between points are: </p>
         <p class="path-distance">The distance is: </p>
       </div>
     </div>
