--- a/index.html
+++ b/index.html
@@ -22,44 +22,11 @@
             <p>Starting point (0)</p>
             <label>
               X
-              <input type="text" class="coordinate-x" value=2>
+              <input type="text" class="coordinate-x">
             </label>
             <label>
               Y
-              <input type="text" class="coordinate-y" value=8>
-            </label>
-          </div>
-          <div class="coordinates-set" id=1>
-            <p>1</p>
-            <label>
-              X
-              <input type="text" class="coordinate-x" value=7>
-            </label>
-            <label>
-              Y
-              <input type="text" class="coordinate-y" value=2>
-            </label>
-          </div>
-          <div class="coordinates-set" id=2>
-            <p>2</p>
-            <label>
-              X
-              <input type="text" class="coordinate-x" value=3>
-            </label>
-            <label>
-              Y
-              <input type="text" class="coordinate-y" value=1>
-            </label>
-          </div>
-          <div class="coordinates-set" id=3>
-            <p>3</p>
-            <label>
-              X
-              <input type="text" class="coordinate-x" value=12>
-            </label>
-            <label>
-              Y
-              <input type="text" class="coordinate-y" value=4>
+              <input type="text" class="coordinate-y">
             </label>
           </div>
         </div>
@@ -69,10 +36,10 @@
         </div>
       </div>
       <div class="result-container">
-        <p class="paths-number">Number of possible paths: </p>
-        <p class="path-order">The order of points for shortest path is: </p>
-        <p class="path-segments">The distance between points are: </p>
-        <p class="path-distance">The distance is: </p>
+        <p>Number of possible paths: <p class="paths-number"></p> </p>
+        <p>The order of points for shortest path is: <p class="path-info path-order"></p>
+        <p>The distance between points are: <p class="path-info path-segments"></p>
+        <p>The distance is: <p class="path-info path-distance"></p>
       </div>
     </div>
   </main>
