--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Traveling Salesman Problem</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
   </head>
 
@@ -22,17 +23,17 @@
             <p>Starting point (0)</p>
             <label>
               X
-              <input type="text" class="coordinate-x">
+              <input type="text" class="coords coordinate-x">
             </label>
             <label>
               Y
-              <input type="text" class="coordinate-y">
+              <input type="text" class="coords coordinate-y">
             </label>
           </div>
         </div>
         <div class="content buttons">
-          <button type="button" id="add-point">Add Point</button>
-          <button type="submit" id="calculate">Calculate Path</button>
+          <button class="action-button" type="button" id="add-point">Add Point</button>
+          <button class="action-button" type="submit" id="calculate">Calculate Path</button>
         </div>
       </div>
       <div class="result-container">
