--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         </div>
       </div>
       <div class="result-container">
-        <p>Number of possible paths: <p class="paths-number"></p> </p>
-        <p>The order of points for shortest path is: <p class="path-info path-order"></p>
-        <p>The distance between points are: <p class="path-info path-segments"></p>
-        <p>The distance is: <p class="path-info path-distance"></p>
+        <p>Number of possible paths: <p class="result paths-number"></p></p>
+        <p>The order of points for shortest path is: <p class="result path-info path-order"></p>
+        <p>The distance between points are: <p class="result path-info path-segments"></p>
+        <p>The distance is: <p class="result path-info path-distance"></p>
       </div>
     </div>
   </main>
