Added clear button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div class="content buttons">
           <button class="action-button" type="button" id="add-point">Add Point</button>
           <button class="action-button" type="submit" id="calculate">Calculate Path</button>
+          <button class="action-button" type="button" id="clear">Clear Inputs</button>
         </div>
       </div>
       <div class="result-container">
