--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Traveling Salesman Problem</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   </head>
 
   <body>
@@ -44,6 +45,7 @@
         <p>The distance is: <p class="result path-info path-distance"></p>
       </div>
     </div>
+    <canvas id="chart" class="chart_canvas"></canvas>
   </main>
   <script src="assets/main.js"></script>
   </body>
