--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Traveling Salesman Problem</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="assets/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
   </head>
 
   <body>
@@ -48,6 +47,7 @@
     <canvas id="chart" class="chart_canvas"></canvas>
   </main>
   <script src="assets/main.js"></script>
+  <script src="assets/canvasGrid.js"></script>
   </body>
   
 </html>
