Display canvas grid

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p>The distance is: <p class="result path-info path-distance"></p>
       </div>
     </div>
-    <canvas id="chart" class="chart_canvas"></canvas>
+    <canvas id="chart" class="chart_canvas" width="600" height="600"></canvas>
   </main>
   <script src="assets/main.js"></script>
   <script src="assets/canvasGrid.js"></script>
