Create remove buttons for each input

--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
               Y
               <input type="text" class="coords coordinate-y">
             </label>
+            <span class="button button--danger coordinates__remove">Remove</span>
           </div>
         </div>
         <div class="content buttons">
-          <button class="action-button" type="button" id="add-point">Add Point</button>
-          <button class="action-button" type="submit" id="calculate">Calculate Path</button>
-          <button class="action-button" type="button" id="clear">Clear Inputs</button>
+          <button class="button button--primary" type="button" id="add-point">Add Point</button>
+          <button class="button button--primary" type="submit" id="calculate">Calculate Path</button>
+          <button class="button button--danger" type="button" id="clear">Clear All</button>
         </div>
       </div>
       <div class="result-container">
