--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
       </div>
     </div>
     <div class="canvas__container">
-      <canvas id="chart" class="chart__canvas" width="600" height="600"></canvas>
+      <canvas id="chart-grid" class="chart__canvas chart__canvas-grid" width="600" height="600"></canvas>
+      <canvas id="chart-points" class="chart__canvas chart__canvas-points" width="600" height="600"></canvas>
     </div>
     </div>
   </main>
