--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <div class="options__container">
       <div class="coordinates-form">
         <h3>Type coordinates</h3>
-        <div class="content coordinates-values">
-          <div class="coordinates-set" id=0>
-            <p>Starting point (0)</p>
-            <label>
+        <div class="content coordinates__inputs-container">
+          <div class="coordinates__set-container" id="0">
+            <div class="coordinates__set-values">
+              <span class="coordinates__set-counter">0.</span>
+              <label>
               X
               <input type="text" class="coords coordinate-x">
             </label>
@@ -28,7 +29,8 @@
               Y
               <input type="text" class="coords coordinate-y">
             </label>
-            <span class="button button--danger coordinates__remove">Remove</span>
+            <span class="button button--danger coordinates__remove button--hidden">Remove</span>
+            </div>
           </div>
         </div>
         <div class="content buttons">
