--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="coordinates-form">
         <h3>Type coordinates</h3>
         <div class="content coordinates__inputs-container">
-          <div class="coordinates__set-container" id="0">
+          <div class="coordinates__set-container coordinates__set-0" id="0">
               <span class="coordinates__set-counter">0.</span>
               <label>
               X
@@ -52,6 +52,7 @@
   </main>
   <script src="assets/index.js"></script>
   <script src="assets/canvasGrid.js"></script>
+  <script src="assets/templates/inputsTemplate.js"></script>
   </body>
   
 </html>
