Clear canvas before adding new points

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <button class="button button--primary" type="button" id="add-point">Add Point</button>
           <button class="button button--primary" type="submit" id="calculate">Calculate Path</button>
           <button class="button button--danger" type="button" id="clear">Clear All</button>
+          <button class="button button--danger" type="button" id="clearPoints">Clear Points</button>
         </div>
       </div>
       <div class="result-container">
