--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Traveling Salesman Problem</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/variables.css">
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="../assets/styles/variables.css">
+    <link rel="stylesheet" href="../assets/styles/style.css">
   </head>
 
   <body>
@@ -50,9 +50,7 @@
     </div>
     </div>
   </main>
-  <script src="assets/index.js"></script>
-  <script src="assets/canvasGrid.js"></script>
-  <script src="assets/templates/inputsTemplate.js"></script>
+  <script src="./index.js"></script>
   </body>
   
 </html>
