Create labels for each point on canvas

--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@
     <div class="canvas__container">
       <canvas id="chart-grid" class="chart__canvas chart__canvas-grid" width="600" height="600"></canvas>
       <canvas id="chart-points" class="chart__canvas chart__canvas-points" width="600" height="600"></canvas>
+      <canvas id="chart-points-labels" class="chart__canvas chart__canvas-points-labels" width="600" height="600"></canvas>
     </div>
     </div>
   </main>
